--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="pizzaInfo--addButton">Adicionar ao carrinho</div>
-                <div class="pizzaInfo--cancelButton">Cancelar</div>
+                <div class="pizzaInfo--cancelButton" onclick="closeModal()">Cancelar</div>
             </div>
         </div>
     </div>
